# myges2ics

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: auth.rs  cal.rs  config.rs  handlers.rs  main.rs  projects.rs  studentPeriods.rs
