[package]
name = "myges2ics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
base64 = "0.21.4"
chrono = "0.4.31"
dotenv = "0.15.0"
ics = "0.5.8"
rand = "0.8.5"
regex = "1.9.5"
reqwest = "0.11.20"
serde= { version="1.0.183", features=["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version="0.7.9", features=["io"]}
